--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express": "^4.17.1",
     "jasmine": "^3.8.0",
     "jasmine-spec-reporter": "^7.0.0",
+    "path": "^0.12.7",
     "sharp": "^0.28.3",
     "supertest": "^6.1.4",
     "ts-node": "^10.2.0"
