--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint 'index.ts'",
-    "prettier": "prettier --config .prettierrc '*.ts' --write",
+    "lint": "eslint 'src/index.ts'",
+    "prettier": "prettier --config .prettierrc '*/**.ts' --write",
     "start": "nodemon src/index.ts",
     "build": "npx tsc",
     "jasmine": "jasmine",
@@ -19,8 +19,8 @@
     "@types/node": "^16.4.13",
     "@types/sharp": "^0.28.5",
     "@types/supertest": "^2.0.11",
-    "@typescript-eslint/eslint-plugin": "^4.29.0",
-    "@typescript-eslint/parser": "^4.29.0",
+    "@typescript-eslint/eslint-plugin": "^4.29.1",
+    "@typescript-eslint/parser": "^4.29.1",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
