--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "typescript": "^4.3.5"
   },
   "dependencies": {
+    "@types/debug": "^4.1.7",
+    "debug": "^4.3.2",
     "express": "^4.17.1",
     "jasmine": "^3.8.0",
     "jasmine-spec-reporter": "^7.0.0",
